--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="leadhead"> <h3>Leadership and Experience</h3></div>
         <hr class="hor">
         <div class="iconR">
-            <img src = "images/audio-sound-waves-png-7.png"  alt="soundwave">
+            <img src = "images/mic.png"  alt="ribbon-microphone" width= "15%"" height="auto">
         </div>
         <br>
         <br>
