--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src ="images/soundwaveBorder.png" class="border" alt="soundwave">
         </div>
         <img src = "images/MatthewMotley.jpg" class="headshot" alt="Headshot of Matthew" width="150" >
-        <h2>Howdy</h2>
+        <h2>Hello</h2>
         <hr>
         <div class="content">
             <p>I am a third year computer science and Music double major, with an emphasis on leveraging technology to make music more accesible.</p>
